@@ -1,3 +1,7 @@
+2004-11-27  Sergey V. Udaltsov  <svu@gnome.org>
+
+	* gnome-settings-keyboard-xkb.c: support for xmodmap introduced
+
 2004-10-28  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gnome-settings-xrdb.c: (append_xresource_file), (apply_settings):
